--- a/YellowstonePathology/UI/Login/FinalizeAccession/ProviderDistributionPage.xaml
+++ b/YellowstonePathology/UI/Login/FinalizeAccession/ProviderDistributionPage.xaml
@@ -239,6 +239,11 @@
                 
                 <ListView Name="ListViewTestOrderReportDistributionLog" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="9"
                         ItemsSource="{Binding Path=PanelSetOrder.TestOrderReportDistributionLogCollection}" Margin="2,2,2,2">
+                    <ListView.ContextMenu>
+                        <ContextMenu>
+                            <MenuItem Header="Delete" Click="MenuItemDeleteDistributionLog_Click"></MenuItem>
+                        </ContextMenu>
+                    </ListView.ContextMenu>
                     <ListView.View>
                         <GridView>
                             <GridViewColumn DisplayMemberBinding="{Binding Path=TimeDistributed, StringFormat=MM/dd/yyyy HH:mm}" Header="Time" Width="150"/>
