Add ClientId to client lookup, password generator to web service account edit

--- a/YellowstonePathology/UI/WebService/WebServiceAccountClientEditDialog.xaml
+++ b/YellowstonePathology/UI/WebService/WebServiceAccountClientEditDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.WebService"
         mc:Ignorable="d"
-        Title="Web Service Account Client" Height="700" Width="400" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="14">
+        Title="Web Service Account Client" Height="700" Width="500" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="14">
     <Grid Margin="2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -21,6 +21,7 @@
                               ItemsSource="{Binding Path=WebServiceClientViews}">
             <ListView.View>
                 <GridView>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=ClientId}" Width="80" Header="Id" />
                     <GridViewColumn DisplayMemberBinding="{Binding Path=ClientName}" Width="380" Header="Client" />
                 </GridView>
             </ListView.View>
