--- a/YellowstonePathology/UI/WebService/WebServiceAccountEditDialog.xaml
+++ b/YellowstonePathology/UI/WebService/WebServiceAccountEditDialog.xaml
@@ -48,10 +48,17 @@
                     <TextBox Grid.Column="1" Grid.Row="1" Margin="2" Text="{Binding Path=WebServiceAccount.UserName}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="2" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Password:" />
-                    <TextBox Grid.Column="1" Grid.Row="2" Margin="2" Text="{Binding Path=WebServiceAccount.Password}" />
+                    <Grid Grid.Column="1" Grid.Row="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBox Grid.Column="0" Margin="2" Text="{Binding Path=WebServiceAccount.Password}" />
+                        <Button Name="PwGenerator" Grid.Column="1" HorizontalAlignment="Right" Height="30" Width="150" Margin="2" Click="PwGenerator_Click">Generate Password</Button>
+                    </Grid>
 
                     <TextBlock Grid.Column="0" Grid.Row="3" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Display Name:" />
-                    <TextBox Grid.Column="1" Grid.Row="3" Margin="2" Text="{Binding Path=WebServiceAccount.DisplayName}" />
+                    <TextBox Grid.Column="1" Grid.Row="3"  Margin="2" Text="{Binding Path=WebServiceAccount.DisplayName}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="4" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Primary Client Id:" />
                     <TextBox Grid.Column="1" Grid.Row="4" Margin="2" Text="{Binding Path=WebServiceAccount.PrimaryClientId}" />
