--- a/YellowstonePathology/UI/Surgical/ProspectiveReviewResultPage.xaml
+++ b/YellowstonePathology/UI/Surgical/ProspectiveReviewResultPage.xaml
@@ -99,16 +99,20 @@
 				</Grid.RowDefinitions>
 
 				<TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Add Reviewer</TextBlock>
-               
-				<TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
+
+                <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
+                    <Hyperlink Click="HyperLinkAddDrBibbey_Click">Dr. Bibbey</Hyperlink>
+                </TextBlock>
+                
+                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAddDrBrown_Click">Dr. Brown</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">                    
+				<TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAddDrDurden_Click">Dr. Durden</Hyperlink>
 				</TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">
+                <TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">
 					<Hyperlink Click="HyperLinkAddDrEmerick_Click">Dr. Emerick</Hyperlink>
                 </TextBlock>
 
