--- a/YellowstonePathology/UI/MainWindow.xaml
+++ b/YellowstonePathology/UI/MainWindow.xaml
@@ -88,6 +88,7 @@
                     <MenuItem Name="MenuItemSystemUser" Header="System User" Click="MenuItemSystemUser_Click"></MenuItem>
                     <MenuItem Name="MenuItemWebServiceAccounts" Header="Web Service Accounts" Click="MenuItemWebServiceAccounts_Click"></MenuItem>
                     <MenuItem Name="MenuItemTest" Header="Testing" Click="MenuItemTest_Click"></MenuItem>
+                    <MenuItem Name="MenuItemDictationTemplates" Header="Dictation Templates" Click="MenuItemDictationTemplates_Click" />
                 </MenuItem>
 
                 <MenuItem Header="_Monitor" Name="MenuItemMonitor">
@@ -107,7 +108,7 @@
 						<StackPanel Orientation="Horizontal">
 							<Image Source="/Resources/Save.ico"></Image>
 							<TextBlock Margin="2,0,0,0">Save</TextBlock>
-						</StackPanel>
+						</StackPanel> 
 				</Button>
 
                     <Button Click="ToolBarButtonSendMessage_Click" ToolTip="Send Message" Margin="2,0,0,0" Height="22" Name="ToolBarButtonSendMessage" Visibility="Visible">
