Revise Dictation Template Edit Page

--- a/YellowstonePathology/UI/Gross/DictationTemplateEditPage.xaml
+++ b/YellowstonePathology/UI/Gross/DictationTemplateEditPage.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.Gross"
         mc:Ignorable="d"
-        Title="DictationTemplateEdit" Height="750" Width="700" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
+        Title="DictationTemplateEdit" Height="800" Width="700" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -14,31 +14,33 @@
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="6*" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Margin="2" HorizontalAlignment="Right" >Template Name:</TextBlock>
+        <TextBlock Grid.Column="0" Grid.Row="0" Margin="2" HorizontalAlignment="Right">Name:</TextBlock>
         <TextBox Grid.Column="1" Grid.Row="0" Margin="2" Text="{Binding Path=DictationTemplate.TemplateName}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="1" Margin="2" HorizontalAlignment="Right" >Text:</TextBlock>
-        <ScrollViewer Grid.Column="1" Grid.Row="1" Margin="2" HorizontalScrollBarVisibility="Disabled">
+        <TextBlock Grid.Column="0" Grid.Row="1" Margin="2" HorizontalAlignment="Right">Text:</TextBlock>
+        <ScrollViewer Grid.Column="0" Grid.Row="2" Margin="2" Grid.ColumnSpan="2" HorizontalScrollBarVisibility="Disabled">
             <TextBox  Text="{Binding Path=DictationTemplate.Text}" AcceptsReturn="True" TextWrapping="Wrap" />
         </ScrollViewer>
 
-        <TextBox Grid.Column="0" Grid.Row="2" Margin="2" HorizontalAlignment="Right">Specimen:</TextBox>
-        <ListView Grid.Column="1" Grid.Row="2" Margin="2" ItemsSource="{Binding Path=DictationTemplate.SpecimenCollection}">
+        <TextBlock Grid.Column="0" Grid.Row="3" Margin="2" HorizontalAlignment="Right">Specimen:</TextBlock>
+        <ListView Grid.Column="0" Grid.Row="4" Margin="2" Grid.ColumnSpan="2" ItemsSource="{Binding Path=DictationTemplate.SpecimenCollection}">
             <ListView.View>
             <GridView>
-                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Path=SpecimenName}" Width="270"/>
-                <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Path=Description}" Width="270"/>
+                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Path=SpecimenName}" Width="330"/>
+                <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Path=Description}" Width="330"/>
                 </GridView>
             </ListView.View>
         </ListView>
         
-        <Button Name="ButtonAddSpecimen" Grid.Column="0" Grid.Row="3" Margin="2" Width="80" Height="30" Click="ButtonAddSpecimen_Click">Add Specimen</Button>
-        <StackPanel Grid.Column="1" Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right">
+        <Button Name="ButtonAddSpecimen" Grid.Column="0" Grid.Row="5" Margin="2" Width="80" Height="30" Click="ButtonAddSpecimen_Click">Add</Button>
+        <StackPanel Grid.Column="1" Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Name="ButtonCancel" Margin="2" Width="80" Height="30" HorizontalAlignment="Right" Click="ButtonCancel_Click">Cancel</Button>
             <Button Name="ButtonOk" Margin="2" Width="80" Height="30" HorizontalAlignment="Right" Click="ButtonOk_Click">OK</Button>
         </StackPanel>
