--- a/YellowstonePathology/UI/Common/OrderDialog.xaml
+++ b/YellowstonePathology/UI/Common/OrderDialog.xaml
@@ -292,7 +292,7 @@
             <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=PanelOrderComment}" HorizontalAlignment="Stretch"></TextBox>
 
             <TreeView Name="TreeViewOrders" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Margin="2,2,2,2" ItemsSource="{Binding Path=OrderItemView.OrderItemDocument.Elements[OrderItem]}"
-					  ItemTemplateSelector="{StaticResource OrderItemTemplateSelector}" HorizontalAlignment="Left" VerticalAlignment="Top" BorderThickness="0">
+					  ItemTemplateSelector="{StaticResource OrderItemTemplateSelector}" HorizontalAlignment="Stretch" VerticalAlignment="Top" BorderThickness="0">
             </TreeView>
         </Grid>
     </Grid>
