--- a/YellowstonePathology/UI/MainWindow.xaml
+++ b/YellowstonePathology/UI/MainWindow.xaml
@@ -34,6 +34,7 @@
 			    <MenuItem Header="_Surgical" Name="MenuItemSurgical">
 				    <MenuItem Header="_Typing" Click="ToolBarButtonTypingWorkspace_Click"></MenuItem>				
 				    <MenuItem Header="Surgical Rescreen" Click="SurgicalRescreen_Click"></MenuItem>
+                    <MenuItem Header="New Order Window" Click="NewOrderWindow_Click"></MenuItem>
                 </MenuItem>
         
 			    <MenuItem Header="_Cytology" Name="MenuItemCytology">
